--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@monaco-editor/react": "^4.6.0",
+    "@remixicon/react": "^4.6.0",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
@@ -26,7 +27,8 @@
     "@types/react-syntax-highlighter": "^15.5.6",
     "ahooks": "^3.7.5",
     "axios": "^1.3.5",
-    "classnames": "^2.3.2",
+    "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
     "copy-to-clipboard": "^3.3.3",
     "dify-client": "^2.3.1",
     "eslint": "8.36.0",
@@ -38,6 +40,7 @@
     "immer": "^9.0.19",
     "js-cookie": "^3.0.1",
     "katex": "^0.16.7",
+    "mime": "^4.0.6",
     "negotiator": "^0.6.3",
     "next": "^14.0.4",
     "rc-textarea": "^1.5.3",
@@ -57,6 +60,7 @@
     "scheduler": "^0.23.0",
     "server-only": "^0.0.1",
     "swr": "^2.1.0",
+    "tailwind-merge": "^3.0.1",
     "typescript": "4.9.5",
     "use-context-selector": "^1.4.1",
     "uuid": "^9.0.0"
