--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "tailwind-merge": "^3.0.1",
     "typescript": "4.9.5",
     "use-context-selector": "^1.4.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "0.36.0",
